--- a/Core/pom.xml
+++ b/Core/pom.xml
@@ -14,4 +14,21 @@
     <artifactId>transportsystem.autotesting.core</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+    </dependencies>
+
+    <properties>
+        <jackson.version>2.10.1</jackson.version>
+    </properties>
 </project>
