--- a/ApiTests/pom.xml
+++ b/ApiTests/pom.xml
@@ -33,7 +33,15 @@
             <version>${unirest.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
+        </dependency>
+   </dependencies>
+
     <properties>
         <unirest.version>3.3.00</unirest.version>
+        <assertj.version>3.15.0</assertj.version>
     </properties>
 </project>
