Added authenticateUser() and getAccessToken() methods

--- a/ApiTests/pom.xml
+++ b/ApiTests/pom.xml
@@ -38,6 +38,12 @@
             <artifactId>assertj-core</artifactId>
             <version>${assertj.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
    </dependencies>
 
     <properties>
