--- a/transportsystem.autotesting.api/pom.xml
+++ b/transportsystem.autotesting.api/pom.xml
@@ -13,6 +13,7 @@
     <groupId>ru.iukhimenko</groupId>
     <artifactId>transportsystem.autotesting.api</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
