--- a/transportsystem.autotesting.core/pom.xml
+++ b/transportsystem.autotesting.core/pom.xml
@@ -8,6 +8,7 @@
         <artifactId>transportsystem.autotesting</artifactId>
         <groupId>ru.iukhimenko</groupId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
 
     <groupId>ru.iukhimenko</groupId>
