--- a/transportsystem.autotesting.core/src/main/resources/config.properties
+++ b/transportsystem.autotesting.core/src/main/resources/config.properties
@@ -1,3 +1,5 @@
 baseURI = https://trans-system.herokuapp.com
 adminUsername = admin
 adminPassword = admin
+#chrome, firefox, legacy_firefox, ie, opera, edge
+browser=firefox
