Added tests on sorting functionality for TransportDocumentsPage

--- a/transportsystem.autotesting.core/src/main/resources/config.properties
+++ b/transportsystem.autotesting.core/src/main/resources/config.properties
@@ -2,4 +2,4 @@ baseURI = https://trans-system.herokuapp.com
 adminUsername = admin
 adminPassword = admin
 #chrome, firefox, legacy_firefox, ie, opera, edge
-browser=firefox
+browser=chrome
