--- a/transportsystem.autotesting.core/src/main/resources/config.properties
+++ b/transportsystem.autotesting.core/src/main/resources/config.properties
@@ -1,5 +1,5 @@
-baseURI = https://trans-system.herokuapp.com
-adminUsername = admin
-adminPassword = admin
+baseURI=https://trans-system.herokuapp.com
+adminUsername=
+adminPassword=
 #chrome, firefox, legacy_firefox, ie, opera, edge
 browser=chrome
