--- a/transportsystem.autotesting.core/pom.xml
+++ b/transportsystem.autotesting.core/pom.xml
@@ -22,7 +22,6 @@
             <artifactId>jackson-core</artifactId>
             <version>${jackson.version}</version>
         </dependency>
-
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
@@ -34,9 +33,16 @@
             <version>${jackson.version}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <properties>
         <jackson.version>2.10.1</jackson.version>
+        <lombok.version>1.18.12</lombok.version>
     </properties>
 </project>
