--- a/transportsystem.autotesting.core/pom.xml
+++ b/transportsystem.autotesting.core/pom.xml
@@ -39,10 +39,18 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.aeonbits.owner</groupId>
+            <artifactId>owner</artifactId>
+            <version>${owner.version}</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
         <jackson.version>2.10.1</jackson.version>
         <lombok.version>1.18.12</lombok.version>
+        <owner.version>1.0.12</owner.version>
     </properties>
 </project>
