--- a/transportsystem.autotesting.core/src/main/resources/config.properties
+++ b/transportsystem.autotesting.core/src/main/resources/config.properties
@@ -1,4 +1,4 @@
-baseURL=https://trans-system.herokuapp.com
+baseUrl=https://trans-system.herokuapp.com
 adminUsername=natalia
 adminPassword=iukhimenko
 #chrome, firefox, legacy_firefox, ie, opera, edge
