--- a/pom.xml
+++ b/pom.xml
@@ -16,26 +16,36 @@
     </modules>
 
     <properties>
-        <junit.jupiter.version>5.5.2</junit.jupiter.version>
-        <log4j.version>2.13.0</log4j.version>
+        <junit.jupiter.version>5.11.4</junit.jupiter.version>
+        <junit-platform-surefire-provider.version>1.3.2</junit-platform-surefire-provider.version>
+        <allure-junit5.version>2.29.1</allure-junit5.version>
+        <allure-maven.version>2.15.2</allure-maven.version>
+        <log4j.version>2.24.3</log4j.version>
         <javafaker.version>1.0.2</javafaker.version>
         <apache-commons-lang3.version>3.0</apache-commons-lang3.version>
-        <assertj.version>3.15.0</assertj.version>
-        <maven.compiler.target>1.8</maven.compiler.target>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <junit-platform-surefire-provider.version>1.2.0</junit-platform-surefire-provider.version>
-        <aspectj.version>1.8.10</aspectj.version>
-        <allure-junit5.version>2.13.3</allure-junit5.version>
-        <allure-maven.version>2.8</allure-maven.version>
-        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
-        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
+        <assertj.version>3.27.2</assertj.version>
+        <aspectj.version>1.9.22</aspectj.version>
+        <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
+        <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
         <allure-results.directory>${project.build.directory}/allure-results</allure-results.directory>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter</artifactId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit.jupiter.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${junit.jupiter.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit.jupiter.version}</version>
         </dependency>
 
