--- a/transportsystem.autotesting.core/src/main/resources/config.properties
+++ b/transportsystem.autotesting.core/src/main/resources/config.properties
@@ -2,4 +2,4 @@ baseUrl=https://transport-system.onrender.com
 adminUsername=natalia
 adminPassword=iukhimenko
 #chrome, firefox, legacy_firefox, ie, opera, edge
-browser=chrome
+browser=firefox
