Updated baseUrl for backend

--- a/transportsystem.autotesting.core/src/main/resources/config.properties
+++ b/transportsystem.autotesting.core/src/main/resources/config.properties
@@ -1,4 +1,5 @@
 baseUrl=https://transport-system.onrender.com
+backendBaseUrl=https://transport-system-backend.onrender.com
 adminUsername=natalia
 adminPassword=iukhimenko
 #chrome, firefox, legacy_firefox, ie, opera, edge
