--- a/transportsystem.autotesting.core/src/main/resources/config.properties
+++ b/transportsystem.autotesting.core/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 baseUrl=https://transport-system.onrender.com
 backendBaseUrl=https://transport-system-backend.onrender.com
-adminUsername=natalia
-adminPassword=iukhimenko
+adminUsername=ts_admin
+adminPassword=ts_admin
 #chrome, firefox, legacy_firefox, ie, opera, edge
 browser=firefox
