--- a/Dockerfile-api
+++ b/Dockerfile-api
@@ -1,7 +1,10 @@
 FROM maven:3.8.3-openjdk-17
 WORKDIR /app
-COPY ./transportsystem.autotesting.core/pom.xml /app/transportsystem.autotesting.core/
-COPY ./transportsystem.autotesting.api/pom.xml /app/transportsystem.autotesting.api/
-COPY ./transportsystem.autotesting.ui/pom.xml /app/transportsystem.autotesting.ui/
+COPY ./transportsystem.autotesting.core/pom.xml transportsystem.autotesting.core/
+COPY ./transportsystem.autotesting.core/src transportsystem.autotesting.core/src/
+COPY ./transportsystem.autotesting.api/pom.xml transportsystem.autotesting.api/
+COPY ./transportsystem.autotesting.api/src transportsystem.autotesting.api/src
+COPY ./transportsystem.autotesting.ui/pom.xml transportsystem.autotesting.ui/
+COPY ./transportsystem.autotesting.ui/src transportsystem.autotesting.ui/src
 COPY ./pom.xml /app
 CMD ["mvn", "clean", "test", "-pl", "transportsystem.autotesting.api", "-am"]
