--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
         <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
         <allure-results.directory>${project.build.directory}/allure-results</allure-results.directory>
+        <lombok.version>1.18.36</lombok.version>
     </properties>
 
     <dependencies>
@@ -89,6 +90,13 @@
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-junit5</artifactId>
             <version>${allure-junit5.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
