--- a/transportsystem.autotesting.ui/pom.xml
+++ b/transportsystem.autotesting.ui/pom.xml
@@ -10,7 +10,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ui</artifactId>
+    <artifactId>transportsystem.autotesting.ui</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <properties>
         <selenide.version>7.6.1</selenide.version>
