Added possibility to execute UI tests in docker containers via selenoid

--- a/transportsystem.autotesting.core/src/main/resources/config.properties
+++ b/transportsystem.autotesting.core/src/main/resources/config.properties
@@ -3,4 +3,5 @@ backendBaseUrl=https://transport-system-backend.onrender.com
 adminUsername=ts_admin
 adminPassword=ts_admin
 #chrome, firefox, legacy_firefox, ie, opera, edge
-browser=firefox
+browser=chrome
+browserVersion=128.0
