--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,8 @@
+volumes:
+  reports:
+networks:
+  selenoid_network:
+    driver: bridge
 services:
   api-tests:
     build:
@@ -17,8 +22,40 @@ services:
       CHECK_RESULTS_EVERY_SECONDS: 1
       KEEP_HISTORY: 1
     ports:
-        - "5050:5050"
+      - "5050:5050"
     volumes:
-        - reports:/app/allure-results
-volumes:
-  reports:
+      - reports:/app/allure-results
+  selenoid:
+    container_name: selenoid
+    image: aerokube/selenoid:latest-release
+    ports:
+      - "4444:4444"
+    volumes:
+      - ./transportsystem.autotesting.ui/src/test/resources/selenoid-config:/etc/selenoid
+      - ./transportsystem.autotesting.ui/src/test/resources/selenoid_config/video:/opt/selenoid/video
+      - ./transportsystem.autotesting.ui/src/test/resources/selenoid_config/logs:/opt/selenoid/logs
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      - OVERRIDE_VIDEO_OUTPUT_DIR=./transportsystem.autotesting.ui/src/test/resources/selenoid_config/video
+    shm_size: "2g"
+    command: [ "-conf", "/etc/selenoid/browsers.json", "-container-network", "transport-system-auto-tests_selenoid_network", "-limit", "10", "-retry-count", "2", "-video-output-dir", "/opt/selenoid/video", "-log-output-dir", "/opt/selenoid/logs", "-session-attempt-timeout", "3m", "-service-startup-timeout", "3m"]
+    networks:
+      - selenoid_network
+  selenoid-ui:
+    container_name: selenoid-ui
+    image: "aerokube/selenoid-ui:latest"
+    networks:
+      - selenoid_network
+    links:
+      - selenoid
+    ports:
+      - "8081:8080"
+    command: [ "--selenoid-uri", "http://selenoid:4444" ]
+  ui-tests:
+    container_name: ui-tests
+    build:
+      dockerfile: Dockerfile-ui
+    networks:
+      - selenoid_network
+    depends_on:
+      - selenoid
