--- a/transportsystem.autotesting.core/src/main/resources/config.properties
+++ b/transportsystem.autotesting.core/src/main/resources/config.properties
@@ -4,4 +4,7 @@ adminUsername=ts_admin
 adminPassword=ts_admin
 #chrome, firefox, legacy_firefox, ie, opera, edge
 browser=chrome
-browserVersion=128.0
+#remote, local
+environment=remote
+#true, false
+isHeadless=false
